[package]
name = "pngify"
description = "A small tool to save any file as a grayscale image"
version = "0.1.0"
edition = "2021"
authors = ["Christoph Otter"]

[dependencies]
image = "0.24.0"
clap = { version = "3.0.14", features = ["derive"] }
match_any = "1.0.1"
derive-enum-from-into = "0.1.1"
anyhow = "1.0.53"